[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fish/BabyShark/BabyShark.gd" type="Script" id=1]
[ext_resource path="res://Fish/Behaviours/DetectionArea/DetectionArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fish/FishTemplate/FishTemplate.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fish/Behaviours/SwimToRandomPtBasedOnRadius/SwimToRandomPtBasedOnRadius.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fish/Behaviours/FishHitBox/FishHitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fish/Behaviours/FollowBobber/FollowBobber.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fish/BabyShark/FishSprite.gd" type="Script" id=7]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Baby Shark/Baby shark left.png" type="Texture" id=8]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Baby Shark/Baby Shark right.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "FacingRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "FacingLeft",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 140.0

[sub_resource type="CircleShape2D" id=3]
radius = 300.0

[node name="BabyShark" instance=ExtResource( 3 )]
script = ExtResource( 1 )
amount_needed_to_catch = 50.0
fish_recovery_amount = 0.0
damage = 1

[node name="KinematicBody" parent="." index="0"]
collision_layer = 48
collision_mask = 33

[node name="FishSprite" parent="KinematicBody" index="2"]
frames = SubResource( 1 )
script = ExtResource( 7 )

[node name="RippleSprite" parent="KinematicBody" index="3"]
scale = Vector2( 0.14, 0.14 )

[node name="CollisionShape2D" parent="KinematicBody/ProximityArea" index="0"]
shape = SubResource( 2 )

[node name="DetectionArea" parent="KinematicBody" index="6" instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="KinematicBody/DetectionArea" index="0"]
shape = SubResource( 3 )

[node name="HitBox" parent="KinematicBody" index="7" instance=ExtResource( 5 )]

[node name="FollowBobber" parent="KinematicBody" index="8" instance=ExtResource( 6 )]
speed = 250

[node name="SwimToRandomPtBasedOnRadius" parent="KinematicBody" index="9" instance=ExtResource( 4 )]
speed = 100
radius = 300

[editable path="KinematicBody/DetectionArea"]
